src/test/resources/parser/invalid/syntax/noEndOfType.sbsc
// no end of type declaration

a = (b: num, c: int,

return false;